Scrollbar stuff issues

--- a/rmapp/src/index.css
+++ b/rmapp/src/index.css
@@ -18,4 +18,18 @@ body {
   image-rendering: pixelated;
   background: url('/bg-tile.png') repeat;
   background-size: calc(1rem * 8) calc(1rem * 8);
+  appearance: none;
+}
+
+body::-webkit-scrollbar {
+  width: 1em;
+}
+
+body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
 }
